Stop testing JDK 22